--- a/main.tex
+++ b/main.tex
@@ -277,7 +277,19 @@ the LLM.
 
 LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
-data-substantiated text generation.
+data-substantiated text generation with each approach having its own merits
+and demerits.
+\begin{itemize}
+\item A significant portion of LLM approaches is focused on \textbf{prompting}
+  strategies. Prompt engineering has itself become an area of research
+  \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
+    qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
+    white2023PromptPatternCatalog}
+  due to its openness and lack of consensus apart from general
+  principles\footnote{\href{https://help.openai.com/en/articles/6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
+      Practices for Prompt Engineering with OpenAI API}} for structuring
+  prompts.
+\end{itemize}
 
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
