--- a/main.tex
+++ b/main.tex
@@ -287,7 +287,8 @@ and demerits.
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
     white2023PromptPatternCatalog}
   due to its openness and lack of consensus apart from general
-  principles\footnote{\href{https://help.openai.com/en/articles/6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
+  principles\footnote{\href{https://help.openai.com/en/articles/
+      6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
       Practices for Prompt Engineering with OpenAI API}} for structuring
   prompts.
 \end{itemize}
