--- a/main.tex
+++ b/main.tex
@@ -285,8 +285,8 @@ and demerits.
   strategies. Prompt engineering has itself become an area of research
   \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
-    white2023PromptPatternCatalog}
-  due to its openness and lack of consensus apart from general
+    white2023PromptPatternCatalog} due to its openness and lack of consensus
+  apart from general
   principles\footnote{\href{https://help.openai.com/en/articles/
       6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
       Practices for Prompt Engineering with OpenAI API}} for structuring
