--- a/main.tex
+++ b/main.tex
@@ -290,7 +290,13 @@ and demerits.
   principles\footnote{\href{https://help.openai.com/en/articles/
       6654000-best-practices-for-prompt-engineering-with-the-openai-api}{Best
       Practices for Prompt Engineering with OpenAI API}} for structuring
-  prompts.
+  prompts. Taking advantage of the in-context learning capabilities of LLMs,
+  prompting methods focus on strategies that require the LLM to perform a task
+  without any example (zero-shot), through the provision of providing
+  illustrative examples to facilitate better understanding of the task
+  (few-shot) or by providing a data source to use with which to generate
+  substantiated responses (Retrieval-Augmented Generation or, RAG
+  \cite{lewis2020RetrievalAugmentedGeneration}) 
 \end{itemize}
 
 \subsubsection{Domain Context:}
