--- a/main.tex
+++ b/main.tex
@@ -281,9 +281,9 @@ specific objective or coupled with a data store to facilitate
 data-substantiated text generation with each approach having its own merits
 and demerits.
 \begin{itemize}
-\item A significant portion of LLM approaches is focused on \textbf{prompting}
-  strategies. Prompt engineering has itself become an area of research
-  \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
+\item A significant portion of LLM approaches are focused on
+  \textbf{prompting} strategies. Prompt engineering has itself become an area
+  of research \cite{liu2023JailbreakingChatgptVia,mosbach2023FewShotFine,
     qiao2023ReasoningWithLanguage,schulhoff2024PromptReportSystematic,
     white2023PromptPatternCatalog} due to its openness and lack of consensus
   apart from general
@@ -296,7 +296,7 @@ and demerits.
   illustrative examples to facilitate better understanding of the task
   (few-shot) or by providing a data source to use with which to generate
   substantiated responses (Retrieval-Augmented Generation or, RAG
-  \cite{lewis2020RetrievalAugmentedGeneration}) 
+  \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
 
 \subsubsection{Domain Context:}
