--- a/main.tex
+++ b/main.tex
@@ -296,7 +296,7 @@ and demerits.
   illustrative examples to facilitate better understanding of the task
   (few-shot) or by sequential prompting by breaking down a task into a
   sequence of steps allowing LLMs to reason better (Chain-of-Thought
-  \cite{wei2022ChainThoughtPrompting}) 
+  \cite{wei2022ChainThoughtPrompting}).
 \item
   
   \cite{lewis2020RetrievalAugmentedGeneration})
