--- a/main.tex
+++ b/main.tex
@@ -296,8 +296,9 @@ and demerits.
   illustrative examples to facilitate better understanding of the task
   (few-shot) or by sequential prompting by breaking down a task into a
   sequence of steps allowing LLMs to reason better (Chain-of-Thought
-  \cite{wei2022ChainThoughtPrompting}).
-\item
+  \cite{wei2022ChainThoughtPrompting}).  
+\item While LLMs are capable of performing several tasks `as-is',
+  \textbf{fine-tuning} provides an effective strategy to
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
