--- a/main.tex
+++ b/main.tex
@@ -296,7 +296,9 @@ and demerits.
   illustrative examples to facilitate better understanding of the task
   (few-shot) or by sequential prompting by breaking down a task into a
   sequence of steps allowing LLMs to reason better (Chain-of-Thought
-  \cite{wei2022ChainThoughtPrompting}).  
+  \cite{wei2022ChainThoughtPrompting}). These strategies indicate the
+  relevance of the pre-learnt knowledge of LLMs for ontologies and their
+  ability to adapt when given additional context.
 \item While LLMs are capable of performing several tasks `as-is',
   \textbf{fine-tuning} provides an effective strategy to
   
