--- a/main.tex
+++ b/main.tex
@@ -300,7 +300,9 @@ and demerits.
   relevance of the pre-learnt knowledge of LLMs for ontologies and their
   ability to adapt when given additional context.
 \item While LLMs are capable of performing several tasks `as-is',
-  \textbf{fine-tuning} provides an effective strategy to
+  task-specific \textbf{fine-tuning} provides an effective strategy to improve
+  performance when in-context learning is unable to yield improvements
+  \cite{liu2022FewShotParameter} 
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
