--- a/main.tex
+++ b/main.tex
@@ -279,7 +279,8 @@ the LLM.
 LLMs can be utilized as instruction-following agents, fine-tuned for a
 specific objective or coupled with a data store to facilitate
 data-substantiated text generation with each approach having its own merits
-and demerits.
+and demerits. Different approaches highlight the level of context, task
+adaptation and data grounding is required by LLMs for ontology population.
 \begin{itemize}
 \item A significant portion of LLM approaches are focused on
   \textbf{prompting} strategies. Prompt engineering has itself become an area
@@ -302,7 +303,7 @@ and demerits.
 \item While LLMs are capable of performing several tasks `as-is',
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
-  \cite{liu2022FewShotParameter} 
+  \cite{liu2022FewShotParameter}. 
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
