--- a/main.tex
+++ b/main.tex
@@ -303,7 +303,8 @@ adaptation and data grounding is required by LLMs for ontology population.
 \item While LLMs are capable of performing several tasks `as-is',
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
-  \cite{liu2022FewShotParameter}. 
+  \cite{liu2022FewShotParameter}.
+\item \cite{huang2024LargeLanguageModel}
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
