--- a/main.tex
+++ b/main.tex
@@ -304,7 +304,8 @@ adaptation and data grounding is required by LLMs for ontology population.
   task-specific \textbf{fine-tuning} provides an effective strategy to improve
   performance when in-context learning is unable to yield improvements
   \cite{liu2022FewShotParameter}.
-\item \cite{huang2025SurveyHallucinationIn}
+\item LLMs are probabilistic language models and are known to hallucinate
+  \cite{huang2025SurveyHallucinationIn}. 
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
