--- a/main.tex
+++ b/main.tex
@@ -305,7 +305,7 @@ adaptation and data grounding is required by LLMs for ontology population.
   performance when in-context learning is unable to yield improvements
   \cite{liu2022FewShotParameter}.
 \item LLMs are probabilistic language models and are known to hallucinate
-  \cite{huang2025SurveyHallucinationIn}. 
+  \cite{huang2025SurveyHallucinationIn} facts. 
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
