--- a/main.tex
+++ b/main.tex
@@ -112,8 +112,7 @@ the necessary materials required to reproduce our work in an
 \section{Related Work}
 \label{sec:related-work}
 
-\section{Factors of Influence}
-% \chcomment[id=UB]{\textit{Might need to change Section Title.}}
+\section{Factors}
 \label{sec:factors}
 
 The factors governing LLM-supported ontology population can be categorized
