--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,8 @@ unstructured and semi-structured data.  The wealth of topical information that
 Large Language Models (LLMs) can produce on demand has led to the growing
 interest in the Semantic Web Community to adopt LLMs for various ontology
 enhancement
-\cite{dong2024LanguageModelBased,mateiu2023OntologyEngineeringWith,he2023ExploringLargeLanguage,liu2020ConceptPlacementUsing,
+\cite{dong2024LanguageModelBased,mateiu2023OntologyEngineeringWith,
+  he2023ExploringLargeLanguage,liu2020ConceptPlacementUsing,
   funk2023TowardsOntologyConstruction} and ontology learning
 \cite{he2022BertmapBertBased,chen2023ContextualSemanticEmbeddings,
   he2023LanguageModelAnalysis,babaei2025Llms4omMatchingOntologies} tasks.
@@ -100,7 +101,8 @@ measure statistical reliability of LLM responses..
 
 The rest of the paper is structured as follows. In the next section, we
 highlight related work on ontology population and ontology evaluation.  In
-Section \ref{sec:framework} we provide an overview of the different variables
+Section \ref{sec:factors} we provide an overview of the different factors that
+influence ontology population
 we investigate through our experimentation.  Section \ref{sec:method} outlines
 the exact settings for each of the variables we consider along with the
 experiments conducted. Section \ref{sec:results} discusses the observed
