--- a/main.tex
+++ b/main.tex
@@ -93,19 +93,18 @@ assertions.
 We investigate the effect of the ontology factors: structure, taxonomy and
 entity labels and the LLM factors: LLM choice, prompting approach, domain
 contextualization and response variation over 3 ontologies using 4
-state-of-the-art LLMs
+state-of-the-art LLMs.
 
 The rest of the paper is structured as follows. In the next section, we
 highlight related work on ontology population and ontology evaluation.  In
 Section \ref{sec:factors} we provide an overview of the different factors that
-influence ontology population
-we investigate through our experimentation.  Section \ref{sec:method} outlines
-the exact settings for each of the variables we consider along with the
-experiments conducted. Section \ref{sec:results} discusses the observed
-results and Section \ref{sec:conclusion} concludes the paper.  We provide all
-the necessary materials required to reproduce our work in an
+influence ontology population. Section \ref{sec:experimentation} outlines the
+factors we investigate in the present work and our experimental setup. Section
+\ref{sec:results} discusses the observed results and Section
+\ref{sec:conclusion} concludes the paper.  We provide all the necessary
+materials required to reproduce our work in an
 \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{Anonymous
-  GitHub Repo}
+GitHub Repo}
 
 \section{Related Work}
 \label{sec:related-work}
