--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@ factors we investigate in the present work and our experimental setup. Section
 \ref{sec:conclusion} concludes the paper.  We provide all the necessary
 materials required to reproduce our work in an
 \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{Anonymous
-GitHub Repo}
+GitHub Repo}.
 
 \section{Related Work}
 \label{sec:related-work}
