--- a/main.tex
+++ b/main.tex
@@ -109,11 +109,19 @@ GitHub Repo}.
 \section{Related Work}
 \label{sec:related-work}
 
-The field of ontology learning has primarily focused on (semi-)automatically creating (part of) ontologies.
-Ontology enrichment and ontology population can also be viewed as part of the ontology learning process \cite{petasis2011OntologyPopulationEnrichment} with many overview and survey papers being published
-\cite{buitelaar2005OntologyLearningText,zhou2007OntologyLearningState,wong2012OntologyLearningText,asim2018SurveyOntologyLearning,khadir2021OntologyLearningGrand,du2024ShortReviewOntology} on the topic.
-Whereas earlier approaches combine traditional linguistic and statistical approaches, LLMs are often used today  \cite{du2024ShortReviewOntology}. One of the latest developments is the LLMs4OL paradigm \cite{giglou2024Llms4ol2024Overview} and the accompanying challenge launched in 2023.
-In works related to the challenge, different LLM model families are tested on several ontology learning tasks such as term typing, taxonomy discovery, and extraction of non-taxonomic relations \cite{babaei2023Llms4olLargeLanguage}.
+The field of ontology learning has primarily focused on (semi-)automatically
+creating (part of) ontologies.  Ontology enrichment and ontology population
+can also be viewed as part of the ontology learning process
+\cite{petasis2011OntologyPopulationEnrichment} with many overview and survey
+papers being published
+\cite{buitelaar2005OntologyLearningText,zhou2007OntologyLearningState,wong2012OntologyLearningText,asim2018SurveyOntologyLearning,khadir2021OntologyLearningGrand,du2024ShortReviewOntology}
+on the topic.  Whereas earlier approaches combine traditional linguistic and
+statistical approaches, LLMs are often used today
+\cite{du2024ShortReviewOntology}. One of the latest developments is the
+LLMs4OL paradigm \cite{giglou2024Llms4ol2024Overview} and the accompanying
+challenge launched in 2023.  In works related to the challenge, different LLM
+model families are tested on several ontology learning tasks such as term
+typing, taxonomy discovery, and extraction of non-taxonomic relation\cite{giglou2023Llms4olLargeLanguage}.
 
 \subsection{Ontology Population}
 
