--- a/main.tex
+++ b/main.tex
@@ -138,7 +138,7 @@ used for knowledge base population, and a preliminary work using a combination
 of text summarization, retrieval-augmented-generation and prompt engineering
 \cite{norouzi2024OntologyPopulationUsing}.
 
-\citet{sahbi2025semantic} compare a traditionally semantic approach and an
+\citet{sahbi2025SemanticVs} compare a traditionally semantic approach and an
 LLM-based approach for ontology population in French. The results show that
 the semantic approach is consistent and logically coherent, but creates
 redundancy, while the LLM creates no redundancies but is not always
