--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,8 @@ statistical approaches, LLMs are often used today
 LLMs4OL paradigm \cite{giglou2024Llms4ol2024Overview} and the accompanying
 challenge launched in 2023.  In works related to the challenge, different LLM
 model families are tested on several ontology learning tasks such as term
-typing, taxonomy discovery, and extraction of non-taxonomic relation\cite{giglou2023Llms4olLargeLanguage}.
+typing, taxonomy discovery, and extraction of non-taxonomic relation
+\cite{giglou2023Llms4olLargeLanguage}. 
 
 \subsection{Ontology Population}
 
