--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,9 @@ creating (part of) ontologies.  Ontology enrichment and ontology population
 can also be viewed as part of the ontology learning process
 \cite{petasis2011OntologyPopulationEnrichment} with many overview and survey
 papers being published
-\cite{buitelaar2005OntologyLearningText,zhou2007OntologyLearningState,wong2012OntologyLearningText,asim2018SurveyOntologyLearning,khadir2021OntologyLearningGrand,du2024ShortReviewOntology}
+\cite{buitelaar2005OntologyLearningText,zhou2007OntologyLearningState,
+  wong2012OntologyLearningText,asim2018SurveyOntologyLearning,
+  khadir2021OntologyLearningGrand,du2024ShortReviewOntology}
 on the topic.  Whereas earlier approaches combine traditional linguistic and
 statistical approaches, LLMs are often used today
 \cite{du2024ShortReviewOntology}. One of the latest developments is the
