--- a/main.tex
+++ b/main.tex
@@ -469,6 +469,149 @@ $c_1$ in $O$ \newline $\subseteq$ denotes the `subclass of' or `is a' relation
 asserted concept of the term $t$ and,\newline $\Sigma_{c_1}$ is the extension
 \cite{hlomani2014ApproachesMethodsMetrics} of $c_1$ (i.e. set of
 asserted individuals)
+
+\subsection{}
+\label{subsec:method-ontology-variability}
+% Dataset Choice
+We conduct experiments over three ontologies of varying size and complexity.
+The Wines Ontology \cite{noy2001OntologyDevelopment101} is a well-known
+ontology; it is small, structurally simple, and represents a relatively
+popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
+a larger, more complex and newer ontology focused on accurately capturing the
+life-cycle of digital evidence. We have added individuals to its concepts
+using the Owl Trafficking example provided on the CASE Ontology
+website\footnote{\url{https://caseontology.org/examples/}} and also include in
+it all concepts from the closely related UCO Ontology
+\cite{casey2017AdvancingCoordinatedCyber}. Hereafter, we refer to this
+composite constructed ontology as the CASE Ontology. The Astronomy Ontology
+\cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
+individuals but higher depth and breadth. \chadded[id=UB,
+comment={\textbf{ISWC 5, 8, 16}: Addressing ISWC '25 comments about using
+larger ontologies and about concepts with more than one parent}]{All three
+ontologies comprise of hierarchies where every concept (except the top
+concept) has at most a single parent. We wish to expand the considered set of
+ontologies to include larger ontologies like DBPedia
+\cite{auer2007DbpediaNucleusWeb} with more complicated relationships and
+hierarchies in future works.}  Table \ref{tab:ontology-metrics} outlines
+relevant structural metrics of the ontologies to highlight their differences.
+
+\begin{table}[H]
+\centering
+\caption{Ontology Structure Metrics for Wines, CASE and Astronomy ontologies}
+\label{tab:ontology-metrics}
+\begin{tabular}{|l|r|r|r|}
+\hline
+\textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
+\hline
+\textbf{Classes}                                                          & 76                      & 434                    & 1663                        \\
+\textbf{Individuals}                                                      & 161                     & 131                    & 68                          \\
+\textbf{Depth} \cite{gangemi2005OntologyEvaluationValidation}             & 4                       & 8                      & 10                          \\
+\textbf{Breadth} \cite{gangemi2005OntologyEvaluationValidation}           & 62                      & 228                    & 989                         \\
+\textbf{Dispersion (max.)} \cite{gangemi2005OntologyEvaluationValidation} & 3                       & 118                    & 44                          \\
+\hline
+\end{tabular}
+\end{table}
+
+The choice of the three ontologies is additionally driven by the differences in corresponding semantics of labels of their individuals and concepts. As discussed in Section \ref{subsec:framework-data-variability}, semantic similarity between the embeddings of individuals and concepts highlights the compatibility between an LLM's interpretation of the entities with that present in the ontology. We generate 3072-dimensional embeddings of each individual and concept label for all three ontologies using OpenAI's \verb|text-embedding-3-large| \cite{openai2024EmbeddingModels} model. 
+Despite the embeddings being primarily representative of the OpenAI models, the observed performance trends are similar across all tested models (Section \ref{sec:results}), which lead us to believe that the results can be generalized beyond the GPT family.
+\begin{figure}[H]
+\centering
+    \caption{TSNE projection of concepts and individual label embeddings of ontologies on 2 components}
+    \label{fig:entity-semantic-separation}
+    \includegraphics[scale=0.26]{assets/all_entity_semantic_similarity.pdf}
+\end{figure}
+
+For each ontology, measuring the centroid distance between the embeddings of its concepts and individuals provides the first indication of semantic separation between the two types of entities. Table \ref{tab:ontology-metrics} reports the centroid distances (scaled to $[0, 1]$). We observe the distance between the entity centroids for the CASE ontology to be twice that of the other two ontologies.
+Davies-Bouldin Index (DBI) \cite{davies1979ClusterSeparationMeasure} is an internal clustering evaluation metric to measure how well-separated clusters are. A smaller value indicates better clustering separability with the lowest value being 0. Lower separability between the cluster of concepts and the cluster of individuals for an ontology indicates greater disparity between an LLM's semantic understanding of the entities thereby making them a more difficult scenario for LLMs.
+Table \ref{tab:commands} reports the DBI scores for all three ontologies. Although the DBI values are not very low, the DBI for the CASE ontology is significantly lower than the other two ontologies. Combining the two metrics, the CASE ontology has much larger semantic separability between the two relevant entity types. 
+\chdeleted[id=UB, comment={\textbf{CASE}: Present CASE as the hardest after presenting the lexical variability information}]{As a result, the CASE ontology may pose a harder scenario for the LLMs.}
+Figure \ref{fig:entity-semantic-separation} highlights the entities of all three ontologies projected using t-SNE \cite{van2008VisualizingData} to a two-dimensional space. Visual inspection shows the individuals of the CASE ontology are separated from most of its concepts (bottom right of figure). In contrast, the individuals of the other two ontologies are well contained within the bounds of the concepts.
+
+\chadded[id=UB, comment={\textbf{CASE}: Lexical similarity explanation. I think it highlights why CASE is hard using mAP@D quite well now.}]{
+We measure the lexical similarity between individual and concept labels to assess whether LLMs can resort to lexical matching to perform ontology population.
+We compute the Levenshtein distance \cite{levenshtein1965BinaryCodesCapable} between the labels of individuals and two groups: 1) the directly-asserted concept of the individual and, 2) all other ancestor concepts of the individual (averaged).
+Table \ref{tab:semantic-lexical-measures} provides the two scores for the three ontologies. Group 1 disparity is highest for the Wines ontology and lowest for the CASE ontology. LLMs cannot resort to lexical matching to find the directly-asserted concept for the Wines ontology but might be able to do so for the CASE ontology.
+In fact, we find that $83$ out of the $161$ individuals ($51.5\%$) for the Wines Ontology, $94$ of the $131$ individuals ($71.7\%$) in the CASE Ontology and, $17$ out of the $68$ individuals ($25\%$) for the Astronomy Ontology utilize the name of their directly-asserted concept in their labels. Thus, a great deal of lexical matching can be utilized to identify the directly-asserted concept across the ontologies.
+Group 2 disparity clearly highlights that lexical matching is insufficient for LLMs to infer concept hierarchies.
+The combination of the two disparities highlight that LLMs might be able to infer the directly-asserted concepts from lexical matching but cannot infer hierarchies. This plays a crucial role in our decision to formulate the ontology population task as a retrieval task focusing on hierarchies and not just the directly-asserted concept. \\
+%
+The semantic separation and lexical disparty between the two entity types indicate that the CASE ontology may pose a harder challenge for LLMs. Semantic similarity between the entity types for the other two ontologies suggests they might be easier for LLMs to perform ontology population, even without lexical similarity.}
+
+\begin{table}
+\centering
+\caption{Entity label semantic and lexical metrics for Wines, CASE and Astronomy ontologies (Levenshtein shortened to L. for readability)}
+\label{tab:semantic-lexical-measures}
+\begin{tabular}{|l|r|r|r|}
+\hline
+\textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
+\hline
+\textbf{DBI} \cite{davies1979ClusterSeparationMeasure}                    & 5.995                   & 2.891                 & 6.362
+                  \\
+\textbf{Centroid Distance}                                                & 0.259                   & 0.540                  & 0.261
+                  \\
+\textbf{Direct L. Distance (1)}                                             & 10.285                  & 4.137                  & 5.167
+                  \\
+\textbf{Ancestor L. Distance (2)}                                   & 12.191                   & 14.092                 & 15.381
+                  \\
+\hline
+\end{tabular}
+\end{table}
+
+\subsection{Experimentation with LLM-based Variability}
+\label{subsec:method-llm-variability}
+% Choice of LLM
+We conduct experiments using four LLMs: OpenAI's GPT-4o \cite{openai2024HelloGpt4o}, OpenAI's o1-preview \cite{openai2024IntroducingOpenaiO1}, Meta's Llama3-8B \cite{grattafiori2024Llama} and DeepSeek's R1-Distil-Llama-8B \cite{guo2025DeepSeek}.
+% Reasoning vs. Conventional LLMs
+% Closed-source vs. Open-source
+Our selection involves two larger closed-source models (GPT-4o and o1-preview) and two smaller open-source models (Llama3-8B and R1-Distil-Llama-8B) with two of the selected models being reasoning LLMs (o1-preview and R1-Distil-Llama-8B).
+
+% Prompting strategy
+To investigate the effect of different prompting strategies, we perform experiments on all ontologies with zero-shot prompts and few-shot prompts. For few-shot prompts, we experiment with providing different numbers of examples ranging from 1 to 10. The provided examples are selected randomly from the concepts with the highest number of individuals, ensuring each example is taken from a different concept.
+We experiment with four types of domain contextualization:
+1) \textbf{Generic}: The LLM is only asked to perform a generic task e.g. ranked retrieval.
+2) \textbf{Ontology}: The LLM is defined as an expert in ontologies.
+3) \textbf{Topic} of an ontology: The LLM is defined as an expert in the topic of an ontology e.g. \verb|`You are a wine expert'| for the Wines Ontology \cite{noy2001OntologyDevelopment101}
+4) \textbf{Ontology and Topic}: The LLM is defined as an expert in ontologies and an expert in the topic.\footnote{Examples of the prompt templates can be found at our \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{repository}.}
+
+% Temperature variability and response consistency
+
+To evaluate response consistency over temperature variation, we repeat 3-shot, ontology contextualization experiments on the Wines and CASE ontologies with GPT-4o and Llama3-8B 10 times at three temperature values.
+% To evaluate the consistency in responses generated by LLMs, we perform experiments with GPT-4o and Llama3-8B on the Wines and CASE ontologies for 3-shot prompting using double contextualization (ontology and topic) by repeating each experiment 10 times under three different temperature values.
+Due to resource restrictions, we were unable to perform similar experiments with o1-preview and DeepSeek R1-Distil-Llama-8B and leave it for future work. Our choice of the two ontologies is based on the entity label semantics of ontologies that we discuss in Section \ref{subsec:method-ontology-variability}. The choice of 3-shot prompting is based on performance stabilization that we observe from our experiments further discussed in Section \ref{sec:results}. We choose to explore consistency at the default temperature of each LLM, at a high value and at a low value.
+The default value for both LLMs is approximately midway in their respective ranges. The high and low values are selected by scaling both LLMs' ranges to $[0, 1]$ and choosing the equivalent values of $0.2$ (low) and $0.8$ (high).
+
+% The temperature scales for both the LLMs are different but the default values are approximately midway in their respective ranges. For the high and low values, we scale both temperature ranges to $[0, 1]$ and choose the equivalent values of $0.2$ (low) and $0.8$ (high).
+
+\subsection{Evaluation Metrics}
+\label{subsec:evaluation-metrics}
+
+We compute the standard information retrieval metric Mean Average Precision (mAP) \cite{baezayates1999ModernInformationRetrieval} with mAP computed at 1 ($mAP@1$) highlighting the ability of LLMs to identify the directly asserted concept for an individual and at the depth $D$ ($mAP@D$) of each ontology to better understand an LLM's ability to infer the correct concept hierarchies. For each individual, the ground truth is defined as the sequence of concepts, starting at the individual's directly asserted concept, along the path to the top concept of that ontology.
+\chadded[id=UB, comment={\textbf{ISWC 6}: Defintions of mAP@1 and mAP@D}]{%
+We provide a mathematical formulation of $\text{mAP@K}$ with $K=1,D$ being applied to obtain $\text{mAP@1}$ and $\text{mAP@D}$ respectively.
+\newline \\
+% {\parindent 0pt 
+Let the ground truth hierarchy for an individual $t$ be given by:
+\begin{equation}
+\label{eq:ground-truth}
+\{c_i \mid c_i \in C\ ;\ c_i \subseteq c_{i+1}\ ;\ t \in \Sigma_{c_1}\ ;\ 1 \leq i \leq d \}
+\end{equation}
+where $d$ is the depth of the directly-asserted concept $c_1$ and $d \leq D$ \\
+Let $\{y_i\}_{i=1}^{d}$ be the predicted hierarchy for $t$ \\
+The mAP at a sequence length of $K$ is given by:
+\begin{equation}
+    \label{eq:map}
+    \text{mAP@K} = \frac{1}{\big|T\big|} \sum_{t \in T} \text{AP@K}_t
+\end{equation}
+where, \\
+$T$ is the set of individuals; \\
+$| \cdot |$ is set cardinality and; \\
+$\text{AP@K}_t$ is the average precision for $t$ at a sequence length $K$, given by:
+\begin{equation}
+    \label{eq:ap}
+    \text{AP@K}_t = \frac{1}{K} \sum_{x=1}^{K} \frac{\Big|\{y_i\}_{i=1}^{x} \cap \{c_j\}_{j=1}^{x}\Big|}{\Big|\{y_k\}_{k=1}^{x}\Big|} 
+\end{equation}
+The numerator in Equation \ref{eq:ap} is the cardinality of the set of \textit{true positives} and the denominator is the cardinality of the set of \textit{predictions} for a single indvidual $t$.
+}
 \section{Results and Discussion}
 \label{sec:results}
 
