--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 %
 \usepackage{soul}
 \usepackage[dvipsnames]{xcolor}
-\usepackage[commandnameprefix=always,todonotes={textsize=footnotesize}]{changes} % Add 'final' for submission
+\usepackage[commandnameprefix=always,todonotes={textsize=footnotesize}]{final} % Add 'final' for submission
 \sethighlightmarkup{\IfIsColored{{\sethlcolor{authorcolor!30}\hl{#1}}}{#1}}
 \definechangesauthor[name={Upal Bhattachara}, color=Violet]{UB}
 
