--- a/main.tex
+++ b/main.tex
@@ -485,14 +485,12 @@ it all concepts from the closely related UCO Ontology
 \cite{casey2017AdvancingCoordinatedCyber}. Hereafter, we refer to this
 composite constructed ontology as the CASE Ontology. The Astronomy Ontology
 \cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
-individuals but higher depth and breadth. \chadded[id=UB,
-comment={\textbf{ISWC 5, 8, 16}: Addressing ISWC '25 comments about using
-larger ontologies and about concepts with more than one parent}]{All three
+individuals but higher depth and breadth. All three
 ontologies comprise of hierarchies where every concept (except the top
 concept) has at most a single parent. We wish to expand the considered set of
 ontologies to include larger ontologies like DBPedia
 \cite{auer2007DbpediaNucleusWeb} with more complicated relationships and
-hierarchies in future works.}  Table \ref{tab:ontology-metrics} outlines
+hierarchies in future works.  Table \ref{tab:ontology-metrics} outlines
 relevant structural metrics of the ontologies to highlight their differences.
 
 \begin{table}[H]
@@ -524,10 +522,8 @@ Despite the embeddings being primarily representative of the OpenAI models, the 
 For each ontology, measuring the centroid distance between the embeddings of its concepts and individuals provides the first indication of semantic separation between the two types of entities. Table \ref{tab:ontology-metrics} reports the centroid distances (scaled to $[0, 1]$). We observe the distance between the entity centroids for the CASE ontology to be twice that of the other two ontologies.
 Davies-Bouldin Index (DBI) \cite{davies1979ClusterSeparationMeasure} is an internal clustering evaluation metric to measure how well-separated clusters are. A smaller value indicates better clustering separability with the lowest value being 0. Lower separability between the cluster of concepts and the cluster of individuals for an ontology indicates greater disparity between an LLM's semantic understanding of the entities thereby making them a more difficult scenario for LLMs.
 Table \ref{tab:commands} reports the DBI scores for all three ontologies. Although the DBI values are not very low, the DBI for the CASE ontology is significantly lower than the other two ontologies. Combining the two metrics, the CASE ontology has much larger semantic separability between the two relevant entity types. 
-\chdeleted[id=UB, comment={\textbf{CASE}: Present CASE as the hardest after presenting the lexical variability information}]{As a result, the CASE ontology may pose a harder scenario for the LLMs.}
 Figure \ref{fig:entity-semantic-separation} highlights the entities of all three ontologies projected using t-SNE \cite{van2008VisualizingData} to a two-dimensional space. Visual inspection shows the individuals of the CASE ontology are separated from most of its concepts (bottom right of figure). In contrast, the individuals of the other two ontologies are well contained within the bounds of the concepts.
 
-\chadded[id=UB, comment={\textbf{CASE}: Lexical similarity explanation. I think it highlights why CASE is hard using mAP@D quite well now.}]{
 We measure the lexical similarity between individual and concept labels to assess whether LLMs can resort to lexical matching to perform ontology population.
 We compute the Levenshtein distance \cite{levenshtein1965BinaryCodesCapable} between the labels of individuals and two groups: 1) the directly-asserted concept of the individual and, 2) all other ancestor concepts of the individual (averaged).
 Table \ref{tab:semantic-lexical-measures} provides the two scores for the three ontologies. Group 1 disparity is highest for the Wines ontology and lowest for the CASE ontology. LLMs cannot resort to lexical matching to find the directly-asserted concept for the Wines ontology but might be able to do so for the CASE ontology.
@@ -535,7 +531,7 @@ In fact, we find that $83$ out of the $161$ individuals ($51.5\%$) for the Wines
 Group 2 disparity clearly highlights that lexical matching is insufficient for LLMs to infer concept hierarchies.
 The combination of the two disparities highlight that LLMs might be able to infer the directly-asserted concepts from lexical matching but cannot infer hierarchies. This plays a crucial role in our decision to formulate the ontology population task as a retrieval task focusing on hierarchies and not just the directly-asserted concept. \\
 %
-The semantic separation and lexical disparty between the two entity types indicate that the CASE ontology may pose a harder challenge for LLMs. Semantic similarity between the entity types for the other two ontologies suggests they might be easier for LLMs to perform ontology population, even without lexical similarity.}
+The semantic separation and lexical disparty between the two entity types indicate that the CASE ontology may pose a harder challenge for LLMs. Semantic similarity between the entity types for the other two ontologies suggests they might be easier for LLMs to perform ontology population, even without lexical similarity.
 
 \begin{table}
 \centering
