--- a/main.tex
+++ b/main.tex
@@ -609,6 +609,187 @@ The numerator in Equation \ref{eq:ap} is the cardinality of the set of \textit{t
 
 \section{Results and Discussion}
 \label{sec:results}
+This section present the results and observations across the 288 conducted experiments (zero-shot: 4 LLMs $\times$ 3 ontologies $\times$ 4 domain contextualizations $= 48$; few-shot: 2 LLMs $\times$ 3 ontologies $\times$ 4 domain contextualizations $\times$ 10 few-shot variations $= 240$). Due to the space limitations, we are unable to report all the computed scores here. A complete table with all the results and figures can be found \href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{online}
+\footnote{\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{https://anonymous.4open.science/r/llm\_ontology\_awareness-91C4/}}.
+Table \ref{tab:results} reports a selection of scores representing the results for all three ontologies, all four models, zero-shot, 1-shot, 3-shot and 10-shot prompting strategies and the ontology-focused domain contextualization. The choice to report scores for the ontology domain contextualization is based on it providing the best results for a larger subset of our experiments (more detail in Section \ref{subsec:results-llm-variability}). Despite Table \ref{tab:results} representing a small portion of the total experiments performed, it still highlights the nature of the observed trends that we observe across all variables.
+% and the observed trends across all other variables also being evident.
+However, when analyzing any factor, we do not confine ourselves to a single value for any other variable to be as general as possible. 
+
+When analyzing the effect of different variables, we draw our conclusions with an emphasis on $\text{mAP@D}$ rather than $\text{mAP@1}$. $\text{mAP@1}$ focuses only on the ability of an LLM in identifying the directly-asserted concept of an individual. However, as discussed in Section \ref{subsec:method-ontology-variability}, a large portion of the individuals use the label of their directly-asserted concept for their respective labels. Such lexical similarity would inflate $\text{mAP@1}$ scores and provide an inaccurate representation of the understanding LLMs possess of ontologies. $\text{mAP@D}$, in contrast, reduces the emphasis on the directly-asserted concept and, by requiring LLMs to generate hierarchies, provides greater insight into their understanding of concept hierarchies.
+
+\subsection{Ontology-based Variability Results}
+\label{subsec:results-ontology-variability}
+
+%% Observation about ontology population over different ontologies
+All experimental variants perform better on the Wines and Astronomy ontologies compared to the CASE ontology (for mAP@D). This performance disparity is particularly pronounced in our zero-shot experiments and is significantly reduced even with the inclusion of a single illustrative example (Table \ref{tab:results}).
+
+Except DeepSeek's R1-Distil-Llama-8B, all other LLMs report much higher $mAP@1$ scores than $mAP@D$.
+This reinforces the idea that LLMs are unable to infer the correct concept hierarchies when their semantic understanding of the entities deviates from that of the ontology. $\text{mAP@1}$ scores for the CASE ontology are often higher than the other two ontologies. As discussed in Section \ref{subsec:method-ontology-variability}, a large portion of its individuals ($71.7\%$) utilize the name of their directly-asserted concepts. Lower $\text{mAP@D}$ scores for the CASE ontology reinforce the idea that LLMs resort to lexical matching in identifying directly-asserted concepts but are unable to correctly infer the concept hierarchies. The semantic separability of entity types and lack of lexical parity with ancestor concept labels in conjunction with the poor $\text{mAP@D}$ scores highlight the difficulty of performing ontology population for the CASE ontology. However, performance is significantly improved when examples are provided highlighting the ability of LLMs to quickly grasp the correct taxonomy hierarchy context required of them.
+
+\begin{table}
+\centering
+\caption{Ontology domain contextualization prediction results at zero-shot, 1-shot, 3-shot and 10-shot for all ontologies and LLMs (DeepSeek-R1-Distil-Llama-8B abbreviated to DeepSeek-R1* to save space)}\label{tab:results}
+\begin{tabular}{|c|c|c|r|r|}
+\hline
+\hcalignbf{N-Shot} & \hcalignbf{Ontology} & \hcalignbf{LLM} & \hcalignbf{mAP@1}  & \hcalignbf{mAP@D} \\
+\hline
+\multirow{12}{*}{0}
+& \multirow{4}{*}{Wines}
+    & o1-preview & 0.826 & 0.871 \\
+    \cline{3-5}
+    & & GPT-4o & 0.733 & 0.785 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.484 & 0.571 \\
+    \cline{3-5}
+    & & DeepSeek-R1* & 0.472 & 0.542 \\
+\cline{2-5}
+& \multirow{4}{*}{CASE}
+    & o1-preview & 0.878 & 0.578 \\
+    \cline{3-5}
+    & & GPT-4o & 0.779 & 0.316 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.626 & 0.270 \\
+    \cline{3-5}
+    & & DeepSeek-R1* & 0.557 & 0.196 \\
+\cline{2-5}
+& \multirow{4}{*}{Astronomy}
+    & o1-preview & 0.956 & 0.870 \\
+    \cline{3-5}
+    & & GPT-4o & 0.926 & 0.750 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.544 & 0.420 \\
+    \cline{3-5}
+    & & DeepSeek-R1* & 0.618 & 0.387 \\
+\hline
+\multirow{6}{*}{1}
+& \multirow{2}{*}{Wines}
+    & GPT-4o & 0.800 & 0.868 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.500 &	0.536 \\
+\cline{2-5}
+& \multirow{2}{*}{CASE}
+    & GPT-4o & 0.823 & 0.608 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.700 & 0.372 \\
+\cline{2-5}
+& \multirow{2}{*}{Astronomy}
+    & GPT-4o & 0.940 & 0.830 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.776 & 0.627 \\
+\hline
+\multirow{6}{*}{3}
+& \multirow{2}{*}{Wines}
+    & GPT-4o & 0.873 & 0.889 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.690 & 0.720 \\
+\cline{2-5}
+& \multirow{2}{*}{CASE}
+    & GPT-4o & 0.836 & 0.772 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.711 & 0.552 \\
+\cline{2-5}
+& \multirow{2}{*}{Astronomy}
+    & GPT-4o & 0.954 & 0.807 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.769 & 0.648 \\
+\hline
+\multirow{6}{*}{10}
+& \multirow{2}{*}{Wines}
+    & GPT-4o & 0.894 & 0.901 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.603 & 0.630 \\
+\cline{2-5}
+& \multirow{2}{*}{CASE}
+    & GPT-4o & 0.851 & 0.829 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.785 & 0.673 \\
+\cline{2-5}
+& \multirow{2}{*}{Astronomy}
+    & GPT-4o & 0.914 & 0.778 \\
+    \cline{3-5}
+    & & Llama3-8B & 0.810 & 0.670 \\
+\hline
+\end{tabular}
+\end{table}
+
+%%% The other two ontologies
+LLMs perform much better on the Wines and Astronomy ontologies.
+We observe higher $map@D$ scores compared to $map@1$ for all experiments on the Wines ontology.
+111 of the 161 individuals in the ontology belong to concepts without descendants, thus having no hierarchy to predict. Thus, when an LLM is unable to retrieve the directly asserted concept at the first rank, it is usually able to retrieve it within the top 4 ranks.
+The $map@1$ scores on the Astronomy ontology are much higher than the rest despite $mAP@D$ being mostly similar to that of the Wines ontology. As it is a much larger ontology (Table \ref{tab:ontology-metrics}), we hypothesize that LLMs are able to retrieve the directly asserted concept but the greater depth of the ontology makes it slightly difficult to predict its ancestors. However, the $map@D$ scores still show reasonably accurate results for ontology population and hierarchy inference. Performance improves further when examples are included. The similarity in performance between the Wines and Astronomy ontologies despite their size and structural complexity differences suggests that ontology structure does not play a major role in ontology learning tasks. However, more experimentation is required before any definitive conclusion can be drawn. Agreement between an LLM's semantic interpretation of entity labels and their ontological nature can be the governing factor. Similar centroid distance and DBI scores for the Wines and Astronomy ontologies compared to the CASE ontology support this assumption (Table \ref{tab:ontology-metrics}).
+
+% \subsection{Choice of LLM}
+\subsection{LLM Factors}
+\label{subsec:results-llm-variability}
+
+%% open-source vs. closed-source and large vs. small
+We find that larger (closed-source) LLMs outperform their smaller (open-source) competitors.
+% (Tables \ref{tab:zero-shot-results} and \ref{tab:few-shot-results})
+ Without further experimentation with larger open-source models, it is difficult to say if other factors beyond the model size are responsible for this performance gap. We hope to explore this in future work. The performance gap between GPT-4o and Llama3-8B is very pronounced in the zero-shot setting, but it strongly reduces in the few-shot experiments. Figures \ref{fig:gpt-4o-few-shot} and \ref{fig:llama3-few-shot} also highlight that both models benefit considerably from providing examples to the CASE ontology.
+% Despite performance differences between GPT-4o and Llama3-8B, similar trends observed across all ontologies in Figure \ref{fig:few-shot} is encouraging. 
+Although much smaller in size, Llama3-8B manages to reduce the gap in  performance compared to GPT-4o when provided with a handful of examples (Figure \ref{fig:few-shot}), indicating that even smaller models have the potential to successfully support ontology population. Similar trends in performance growth for the CASE ontology further strengthen the assumption of ontology entity semantics being the principal consideration for LLMs to perform ontology population.
+
+%% Reasoning vs. Conventional LLMs
+o1-preview outperforms all other models in our zero-shot experiments indicating the potential of reasoning LLMs for ontology-related tasks. Despite DeepSeek's R1-Distil-Llama-8B being a reasoning LLM , it has the worst performance among all 4 models. Further prompt engineering could improve results of the smaller reasoning models, but our experimentation highlights that reasoning LLMs do not always outperform conventional LLMs. For larger models, we observe that GPT-4o, when provided with a few examples (Table \ref{tab:results}), performs as well as o1-preview under zero-shot conditions. Further experimentation with few-shot prompting reasoning models would make it clearer if reasoning models are better at supporting ontology learning; however, recent works \cite{wang2024Advanced,nori2024Medprompt,guo2025DeepSeek} suggest that reasoning models do not benefit significantly from few-shot prompting and may even lead to degradation in performance in some situations.
+
+\begin{figure}
+\begin{subfigure}{0.5\textwidth}
+    \centering
+    \caption{GPT-4o}
+    \label{fig:gpt-4o-few-shot}
+    \includegraphics[scale=0.30]{assets/gpt-4o-n-shot-variation-ontology-map.pdf}
+    \end{subfigure}
+\hspace{0.2cm}
+\begin{subfigure}{0.5\textwidth}
+    \centering
+    \caption{Llama3-8B}
+    \label{fig:llama3-few-shot}
+    \includegraphics[scale=0.30]{assets/Llama3-7B-n-shot-variation-ontology-map.pdf}
+    \end{subfigure}
+    \caption{mAP@D variation with number of examples for GPT-4o (a) and Llama3-8B (b) using ontology domain contextualization}\label{fig:few-shot}
+\end{figure}
+
+%% Zero-shot vs. Few-shot
+Including a single example leads to significant performance improvements, particularly on the CASE ontology. Significant improvements in $mAP@D$ highlight how LLMs can adapt with little context. Improvements in $mAP@1$ are less pronounced in comparison.
+% Thus, the primary benefit of adding examples is in identifying the ontological hierarchy relations that a user is looking for.
+Thus, adding examples primarily improves an LLM's ability to infer the correct ontology concept hierarchy.
+The performance improvements on the Wines and Astronomy ontologies are less pronounced, possibly due to the already compatible semantic understanding the LLMs possess of their entities.
+
+%% Few-shot variation
+Figure \ref{fig:few-shot} highlights that adding more examples yields continued performance improvements that plateaus at 3 - 4 examples.
+Performance gains from adding additional examples is more pronounced for Llama3-8B compared to GPT-4o.
+This suggests that smaller LLMs  benefit more from seeing more examples.
+Experimentation with zero-shot and few-shot strategies highlights that few-shot prompting can provide significant performance improvements for ontology population, particularly when an LLM's entity label semantics differs from the ontological entity properties. Largest performance benefits are observed when using 3 or 4 examples beyond which smaller LLMs may benefit more.
+
+Of the $72$ ($288 / 4$) domain contextualization experimentation groups (each combination of LLM, ontology and prompting strategy, over four types of domain contextualization together comprise one group), ontology contextualization yielded the best performance for 31 groups ($43.1\%$) followed by ontology and topic (double) contextualization for 21 groups ($29.2\%$). From these 52 groups with ontology or double contextualization as the best performer, in 27 groups, the second-best performer was the other contextualization method. Of the remaining 20 groups, ontology or double contextualization was second-best in 12 groups. This clearly highlights the preference for the taxonomical contextualization variants. Topic contextualization provided the best performance in 16 groups ($22.2\%$). 
+Table \ref{tab:results} reports the ontology domain contextualization scores for each ontology and LLM under different prompting strategies.
+We observed the difference between the best and second-best strategies to be marginal ($< 0.017$) in several groups.
+
+\begin{figure}
+\begin{subfigure}{0.5\textwidth}
+    \centering
+    \caption{Wines Ontology}
+    \label{fig:wines-temp-variation}
+    \includegraphics[scale=0.32]{assets/wines-ontology-temp-stat-variation-ontology.pdf}
+\end{subfigure}
+\hspace{0.2cm}
+\begin{subfigure}{0.5\textwidth}
+    \centering
+    \caption{CASE Ontology}
+    \label{fig:case-temp-variation}
+    \includegraphics[scale=0.32]{assets/case-uco-owl-trafficking-temp-stat-variation-ontology.pdf}
+\end{subfigure}
+\caption{Temperature variation for (a) Wines and (b) CASE ontologies for GPT-4o and Llama3-8B with 3-shot, ontology domain contextualization. Central points are the average value over 10 runs. Lighter shaded regions are approximated densities over the range of values}
+\label{fig:temp-variation}
+\end{figure}
+
+LLMs are inherently non-deterministic tools. The results they produce are not guaranteed to be 100\% replicable even from identical prompts. Hence, when investigating the applicability of LLMs for the task of determining semantic relations between entities, it is important to examine the potential variance in their performance under fixed conditions. A relevant question is whether calibration of the LLM temperature parameter can improve the mean performance or reduce its variance.
+
+% 
+Figure \ref{fig:temp-variation} presents  $mAP@D$ variability exhibited by GPT-4o and Llama3-8B models run 10 times over Wines and CASE ontologies under three different temperature settings and with all other parameters fixed.
+
+GPT-4o's results are fairly consistent across all runs, which is observable as fairly small spreads in $mAP@D$ values for all three temperature settings and both ontologies. In contrast, there is more variability in the $mAP@D$ scores for Llama3-8B. Surprisingly enough, neither higher temperature settings nor ontology differences bring about peaks in variance (although, more exploration of this issue is required). 
+Looking at the average scores and the influence of temperature on them, we observed no difference in performance at the low temperature setting. Results of the four Welch's T-tests carried out to compare the average $mAP@D$ scores produced by the same model over the same ontology at the low and default temperature conditions are non-significant. Raising the temperature seems to have a detrimental effect. For the Wines ontology, GPT-4o produces a significantly higher average $mAP@D$ score under default temperature conditions (M = 0.88, SD = 0.01) than under the high temperature setting (M = 0.85, SD = 0.01), t(18) = 6.6, p < .001. In a similar fashion, for the CASE ontology, the default temperature resulted in a significantly higher average $mAP@D$ score as well (M = 0.76, SD = 0.01) compared to the higher temperature (M = 0.71, SD = 0.01), t(18) = 9.8, p < .001. Although the same trend is observable for Llama3-8B, the much higher variance of the smaller LLM's results renders the test non-significant.
 
 \section{Conclusion}
 \label{sec:conclusion}
