--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 \bibliographystyle{splncs04nat}
 
 \usepackage{amsmath}
+\usepackage{multirow}
 \newcommand*{\hcalignbf}[1]{\multicolumn{1}{|c|}{\textbf{#1}}}
 \newcommand*{\hlcyan}[1]{{\sethlcolor{Cyan}\hl{#1}}}
 \newcommand*{\hlgreen}[1]{{\sethlcolor{YellowGreen}\hl{#1}}}
