--- a/main.tex
+++ b/main.tex
@@ -482,7 +482,7 @@ adaptation and data grounding is required by LLMs for ontology population.
   extension \cite{hlomani2014ApproachesMethodsMetrics} of $c_1$ (i.e. set of
   asserted individuals)
 
-  \subsection{}
+  \subsection{Ontology Factors}
   \label{subsec:method-ontology-variability}
   % Dataset Choice
   We conduct experiments over three ontologies of varying size and complexity.
