--- a/main.tex
+++ b/main.tex
@@ -613,7 +613,7 @@ similarity.
   \end{tabular}
 \end{table}
 
-\subsection{Experimentation with LLM-based Variability}
+\subsection{LLM Factors}
 \label{subsec:method-llm-variability}
 % Choice of LLM
 We conduct experiments using four LLMs: OpenAI's GPT-4o
