--- a/main.tex
+++ b/main.tex
@@ -747,7 +747,7 @@ ontologies. $\text{mAP@D}$, in contrast, reduces the emphasis on the
 directly-asserted concept and, by requiring LLMs to generate hierarchies,
 provides greater insight into their understanding of concept hierarchies.
 
-\subsection{Ontology-based Variability Results}
+\subsection{Analysis of Ontology Factors}
 \label{subsec:results-ontology-variability}
 
 %% Observation about ontology population over different ontologies
