--- a/main.tex
+++ b/main.tex
@@ -887,7 +887,7 @@ distance and DBI scores for the Wines and Astronomy ontologies compared to the
 CASE ontology support this assumption (Table \ref{tab:ontology-metrics}).
 
 % \subsection{Choice of LLM}
-\subsection{LLM Factors}
+\subsection{Analysis of LLM Factors}
 \label{subsec:results-llm-variability}
 
 %% open-source vs. closed-source and large vs. small
