--- a/main.tex
+++ b/main.tex
@@ -457,8 +457,8 @@ adaptation and data grounding is required by LLMs for ontology population.
 We perform ontology population as a ranked retrieval problem and investigate
 the influence of the ontology factors: structure and, entity labels and the
 LLM factors: choice of LLM, prompting approach over zero-shot and few-shot
-prompting, domain context, response variation over temperature variation and
-statistical consistency.
+prompting, domain context and, response variation over temperature variation
+and statistical consistency.
 
 \subsection{Formulation}
 \label{subsec:formulation}
