--- a/main.tex
+++ b/main.tex
@@ -437,7 +437,13 @@ adaptation and data grounding is required by LLMs for ontology population.
   performance when in-context learning is unable to yield improvements
   \cite{liu2022FewShotParameter}.
 \item LLMs are probabilistic language models and are known to hallucinate
-  \cite{huang2025SurveyHallucinationIn} facts.
+   facts \cite{huang2025SurveyHallucinationIn}. Retrieval-augmented Generation
+   (RAG) is
+\item Retrieval-augmented Generation (RAG)
+  \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
+  knowledge base to utilize as factual grounding for generating responses. It
+  aims to counter hallucinations \cite{huang2025SurveyHallucinationIn} and
+  provide greater domain specificity through the knowledge source context.
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
