--- a/main.tex
+++ b/main.tex
@@ -443,7 +443,10 @@ adaptation and data grounding is required by LLMs for ontology population.
   \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
   knowledge base to utilize as factual grounding for generating responses. It
   aims to counter hallucinations \cite{huang2025SurveyHallucinationIn} and
-  provide greater domain specificity through the knowledge source context.
+  provide greater domain specificity through the knowledge source context. RAG
+  for ontology learning highlights how LLM performance improves when providing
+  a specific domain knowledge source. This performance is of particular
+  interest when working with ontologies in the long-tail.
   
   \cite{lewis2020RetrievalAugmentedGeneration})
 \end{itemize}
