--- a/main.tex
+++ b/main.tex
@@ -439,7 +439,7 @@ adaptation and data grounding is required by LLMs for ontology population.
 \item LLMs are probabilistic language models and are known to hallucinate
    facts \cite{huang2025SurveyHallucinationIn}. Retrieval-augmented Generation
    (RAG) is
-\item Retrieval-augmented Generation (RAG)
+\item \textbf{Retrieval-augmented Generation (RAG)}
   \cite{lewis2020RetrievalAugmentedGeneration} provides LLMs with an external
   knowledge base to utilize as factual grounding for generating responses. It
   aims to counter hallucinations \cite{huang2025SurveyHallucinationIn} and
