--- a/main.tex
+++ b/main.tex
@@ -449,6 +449,8 @@ adaptation and data grounding is required by LLMs for ontology population.
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
 
+\cite{zheng2023WhenAeHelpful}
+
 \subsubsection{Response Variation:}
 \label{subsubsec:llm-factor-response-variation}
 
